manifest/4-crud-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app-deployment
  labels:
    app: crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
    spec:
      containers:
        - name: crud-app
          image: docker.io/timur2906/crud-app:1.1
          ports:
            - containerPort: 8000
      volumes:
        - name: config-volume
          configMap:
            name: postgres-config
---
apiVersion: v1
kind: Service
metadata:
  name: crud-app-service
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
